# catalogue-pipeline

./: .editorconfig  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitbook.yaml  .gitignore  .instructions.md  .jvmopts  .scalafmt.conf  .travis.yml  .wellcome_project  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  REINDEXING.md  RELEASE.md  SUMMARY.md  apm.md  build.sbt  create_zip.sh  docker-compose.yml  docker_run.py  mypy.ini  package.json  pipeline.md  readme.md  run_autoformat.py  scriptFile.scala  scripts.md  secrets.zip.enc  shared_conftest.py  sierra_adapter.md  snapshots.md  styles.css  swagger.json  swagger_v1.json  swagger_v2.json  (+1 more)
catalogue_graph/: .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  elasticsearch.docker-compose.yml  lambda.Dockerfile  mysql.docker-compose.yml  pyproject.toml  pytest.ini  task.Dockerfile
catalogue_graph/.github/workflows/: ci.yml
catalogue_graph/certs/: sectigo_intermediate.pem
catalogue_graph/docs/: neo4j_neptune_cost_comparison.md
catalogue_graph/document_generators/: README.md  create_test_image_documents.py  create_test_work_documents.py  update_image_documents.py  utils.py
catalogue_graph/document_generators/generators/: __init__.py  concepts.py  holdings.py  identifiers.py  images.py  items.py  languages.py  locations.py  notes.py  production.py  random.py  vectors.py  works.py
catalogue_graph/document_generators/test_documents/: image-production.1098.json  image-production.1900.json  image-production.1904.json  image-production.1976.json  image-production.2020.json  images.contributors.0.json  images.contributors.1.json  images.contributors.2.json  images.different-licenses.0.json  images.different-licenses.1.json  images.different-licenses.2.json  images.different-licenses.3.json  images.different-licenses.4.json  images.everything.json  (+212 more)
catalogue_graph/e2e/: test_graph.py
catalogue_graph/notebooks/: .gitignore  adapter_axiell_oai_pmh.ipynb  adapter_axiell_table_maintenance.ipynb  adapter_oai_pmh.ipynb  adapter_oai_pmh_formats.ipynb  adapter_source_tables.ipynb  adapter_store_incremental_update.ipynb  adapter_store_snapshot_sync.ipynb  adapter_table_maintenance.ipynb  adapter_window_harvester.ipynb  adapter_window_notifier.ipynb  adapter_window_store.ipynb  axiell_data_analysis.ipynb  axiell_data_validation.ipynb  axiell_download_raw_oai.ipynb  axiell_marc_to_source.ipynb  axiell_oai_to_marc.ipynb  axiell_transformer.ipynb  axiell_validation.ipynb  buffalo_l.jsonl  buffalo_s.jsonl  calm_download_raw_works.ipynb  calm_download_source_works.ipynb  chatbot_custom_alerting.ipynb  concept_overrides_transform.ipynb  ddb_works_graph_restore.ipynb  ebsco_adapter.ipynb  graph_debug.ipynb  graph_exploration.ipynb  graph_query.ipynb  graph_reindex_by_id.ipynb  graph_s3_debug.ipynb  graph_weco_authority.ipynb  id_minter_rerun_failures.ipynb  local_iceberg_adapter.ipynb  oai-pmh_harvest.ipynb  query.ipynb  rekognition.jsonl  semantic_quality_comparison.ipynb  verification_id_minter_invoke.ipynb
catalogue_graph/scripts/: autoformat.sh  build.sh  ci-setup.sh  deploy_ingestor_lambdas.sh  deploy_lambda.sh  deploy_lambda_zip.sh  deploy_task.sh  pre-push  pre-push.sh  setup.sh  test.sh  typecheck.sh
catalogue_graph/src/: bulk_load_poller.py  bulk_loader.py  concepts_pipeline_reporter.py  config.py  data_quality_checks.py  default.py  dev_requirements.in  dev_requirements.txt  extractor.py  graph_remover.py  graph_remover_incremental.py  graph_scaler.py  graph_status_poller.py  incremental_remover.py  index_remover.py  indexer.py  ingestor_deletions.py  ingestor_indexer.py  ingestor_indexer_monitor.py  ingestor_loader.py  ingestor_loader_monitor.py  ingestor_local.py  ingestor_reporter.py  ingestor_trigger.py  ingestor_trigger_monitor.py  node_remover.py  pit_opener.py  reporter.py  requirements.in  requirements.txt  test.ipynb  test.py
catalogue_graph/terraform/: cloudwatch_alarms.tf  ecr.tf  extractor_ecs_task.tf  iam_policies.tf  iam_state_machines.tf  lambda_bulk_load_poller.tf  lambda_bulk_loader.tf  lambda_catalogue_ingestor.tf  lambda_graph_remover.tf  lambda_graph_scaler.tf  lambda_graph_status_poller.tf  lambda_index_remover.tf  lambda_indexer.tf  lambda_pit_opener.tf  lambda_reporter.tf  locals.tf  neptune.tf  s3.tf  security_groups.tf  state_machine_bulk_loader.tf  state_machine_bulk_loaders.tf  state_machine_catalogue_graph_pipeline.tf  state_machine_concepts_pipeline.tf  state_machine_extractor.tf  state_machine_extractors.tf  state_machine_graph_removers.tf  state_machine_ingestor.tf  state_machine_pipeline.tf  state_machine_schedulers.tf  state_machine_single_extractor_loader.tf  terraform.tf  variables.tf
catalogue_graph/tests/: __init__.py  conftest.py  mocks.py  neptune_generators.py  test_bulk_load_poller.py  test_chatbot_notifier.py  test_concepts_pipeline_reporter.py  test_environment_settings.py  test_extractor.py  test_graph_remover.py  test_graph_remover_incremental.py  test_id_minter.py  test_index_remover.py  test_indexer.py  test_ingestor_deletions.py  test_ingestor_indexer.py  test_ingestor_indexer_monitor.py  test_ingestor_loader.py  test_ingestor_loader_monitor.py  test_ingestor_reporter.py  test_ingestor_trigger.py  test_ingestor_trigger_monitor.py  test_mocks.py  test_utils.py
ebsco_adapter/ebsco_adapter_iceberg/: .gitignore  README.md  elasticsearch.docker-compose.yml  pyiceberg.yml  pyproject.toml
reindexer/scripts/: README.md  concurrently.py  download_transformer_dlq.py  eventbridge.py  fix_dangling_merges.py  get_reindex_status.py  lambda_reindexers.py  pipeline_inject_messages.py  pyproject.toml  reindex_index.py  reingest_for_display.py  requirements.in  requirements.txt  start_reindex.py
scripts/es_index_comparison/: .gitignore  README.md  pyproject.toml
scripts/mimsy_dump/: .gitignore  README.md  mimsy_dump.py  pyproject.toml
semantic-search-local/: .gitignore  README.md  docker-compose.yml  experiment_semantic_search.ipynb  mappings.works_semantic.json  pyproject.toml  serverless_semantic_search.ipynb  setup_semantic_search.ipynb
(+15692 files in other folders)
