[project]
name = "catalogue-graph"
version = "0.1.0"
description = "Catalogue graph processing and indexing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "requests",
    "pydantic",
    "backoff",
    "smart-open",
    "polars",
    "elasticsearch>=8.11,<8.13",
    "tabulate",
    "types-tabulate",
    "boto3-stubs",
    "types-requests",
    "python-dateutil",
    "types-python-dateutil",
    "pyarrow",
    "pyarrow-stubs"
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage[toml]",
    "mypy",
    "pytest",
    "pytest-cov",
    "freezegun",
    "ruff",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "deepdiff"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
addopts = "--cov src --cov-report term --cov-report xml:coverage.xml"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
ignore = ["E501", "B019"]

[tool.mypy]
strict_optional = true
strict_equality = true
disallow_untyped_calls = true
disallow_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["smart_open.*"]
ignore_missing_imports = true
