[project]
name = "ebsco-adapter-iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.10",
    "lxml>=6.0.0",
    "mypy>=1.16.1",
    "pyarrow>=20.0.0",
    "pyiceberg[sql-sqlite]>=0.9.1",
    "smart-open>=7.3.0.post1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pytest>=8.4.0",
]
test = [
    "mypy>=1.16.1",
]

[tool.pytest.ini_options]
pythonpath = "app"

[tool.mypy]
strict_optional = true
strict_equality = true
disallow_untyped_calls = true
disallow_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

ignore_missing_imports = true
