[project]
name = "ebsco-adapter-iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# This project requires Python 3.12 instead of 3.13
# Wheels for pyarrow and pyiceberg are not available for 3.13 yet (as of August 2025)
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.39.10",
    "boto3-stubs>=1.40.15",
    "elasticsearch>=8,<9",
    "lxml>=6.0.0",
    "mypy>=1.16.1",
    "pyarrow>=20.0.0,<21.0.0",
    "pydantic>=2.11.7",
    "pyiceberg[sql-sqlite]>=0.9.1",
    "pymarc>=5.3.1",
    "smart-open>=7.3.0.post1",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "polars>=1.32.3",
    "pytest>=8.4.0",
    "ruff>=0.12.9",
]
test = [
    "mypy>=1.16.1",
]


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
ignore = ["E501", "B019"]

[tool.mypy]
strict_optional = true
strict_equality = true
disallow_untyped_calls = true
disallow_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Ignore untyped imports for external libraries without stubs
[[tool.mypy.overrides]]
module = ["pyarrow.*", "boto3.*", "smart_open.*"]
ignore_missing_imports = true
