[project]
name = "scripts"
version = "0.1.0"
description = "Scripts for managing and reindexing Elasticsearch data"
readme = "README.md"
requires-python = ">=3.10,<3.11"
# Dependencies migrated from requirements.in
dependencies = [
  "boto3",
  "click",
  "elasticsearch",
  "humanize",
  "tabulate",
  "tenacity",
  "tqdm",
]
