[project]
name = "aspect-ratio-inferrer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inferrer-common",
    "joblib==1.2.0"
]

[tool.uv]
package = false

[tool.uv.sources]
inferrer-common = { path = "../common" }

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = "tests"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
