[project]
name = "feature-inferrer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inferrer-common",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "torch==2.8.0",
    "torchvision==0.14.1",
]

[tool.uv]
package = false

[tool.uv.sources]
inferrer-common = { path = "../common" }

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = "test"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "httpx",
]
