[project]
name = "palette_inferrer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "inferrer-common",
    "joblib==1.2.0",
    "numpy==1.26.4",
    "pytest>=8.3.5",
]

[tool.uv]
package = false

[tool.uv.sources]
inferrer-common = { path = "../common" }
